force-app/main/default/objects/Contact/fields/Active_Program_Notification_Date_Today__c.field-meta.xml
<CustomField>
    <fullName>Active_Program_Notification_Date_Today__c</fullName>
    <formula>Enrollment__r.Launchpad__Program__r.Youth_Notification_Date__c == TODAY() &amp;&amp; ISPICKVAL(Enrollment__r.Launchpad__Program__r.Launchpad__Active__c, &apos;Yes&apos;) &amp;&amp; Enrollment__r.Launchpad__Program__r.RecordType.DeveloperName == &apos;Session&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Active Program Notification Date Today</label>
    <type>Checkbox</type>
</CustomField>