force-app/main/default/objects/Contact/fields/Age_at_Start_of_Program__c.field-meta.xml
<CustomField>
    <fullName>Age_at_Start_of_Program__c</fullName>
    <formula>IF(
NOT(ISBLANK(Birthdate)) &amp;&amp;
NOT(ISBLANK($Setup.Launchpad__Participant_Community_Setup__c.Program_Start_Date__c)),
FLOOR(
($Setup.Launchpad__Participant_Community_Setup__c.Program_Start_Date__c -
Birthdate) / 365.25
),
null
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Age at Start of Program</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>