force-app/main/default/objects/Contact/fields/Any_other_source_of_income__c.field-meta.xml
<CustomField>
    <fullName>Any_other_source_of_income__c</fullName>
    <label>Any other source of income?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>