force-app/main/default/objects/Contact/fields/Birth_Certificate__c.field-meta.xml
<CustomField>
    <fullName>Birth_Certificate__c</fullName>
    <label>Birth Certificate?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>