force-app/main/default/objects/Contact/fields/Clearance_Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>Clearance_Expiration_Date__c</fullName>
    <label>Clearance Expiration Date</label>
    <type>Date</type>
</CustomField>