force-app/main/default/objects/Contact/fields/Clearances_requested_through_Justifacts__c.field-meta.xml
<CustomField>
    <fullName>Clearances_requested_through_Justifacts__c</fullName>
    <label>Clearances requested through Justifacts?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>