force-app/main/default/objects/Contact/fields/Country_of_Nationality__c.field-meta.xml
<CustomField>
    <fullName>Country_of_Nationality__c</fullName>
    <label>Country of Nationality</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>United States</fullName>
            </value>
            <value>
                <fullName>Canada</fullName>
            </value>
            <value>
                <fullName>Mexico</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>