force-app/main/default/objects/Contact/fields/Current_Employment_Status__c.field-meta.xml
<CustomField>
    <fullName>Current_Employment_Status__c</fullName>
    <label>Current Employment Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
                <default>true</default>
                <label>None</label>
            </value>
            <value>
                <fullName>Unemployed</fullName>
            </value>
            <value>
                <fullName>Employed Part-Time</fullName>
            </value>
            <value>
                <fullName>Employed Full-Time</fullName>
            </value>
            <value>
                <fullName>Unpaid volunteer or peer work</fullName>
            </value>
            <value>
                <fullName>Full-Time Student</fullName>
            </value>
            <value>
                <fullName>Out of the work force</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>