force-app/main/default/objects/Contact/fields/Current_Most_Recent_School__c.field-meta.xml
<CustomField>
    <fullName>Current_Most_Recent_School__c</fullName>
    <label>Current/Most Recent School (DEPRECATED)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>