force-app/main/default/objects/Contact/fields/Current_Relationship_Status__c.field-meta.xml
<CustomField>
    <fullName>Current_Relationship_Status__c</fullName>
    <label>Current Relationship Status?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None (Default)</fullName>
            </value>
            <value>
                <fullName>Prefer not to say</fullName>
            </value>
            <value>
                <fullName>Widowed</fullName>
            </value>
            <value>
                <fullName>Married or Domestic partner</fullName>
            </value>
            <value>
                <fullName>Divorced or Separated</fullName>
            </value>
            <value>
                <fullName>Single</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>