force-app/main/default/objects/Contact/fields/Date_of_Last_Clearance_Request__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Last_Clearance_Request__c</fullName>
    <label>Date of Last Clearance Request</label>
    <type>Date</type>
</CustomField>