force-app/main/default/objects/Contact/fields/Discharged_Comments__c.field-meta.xml
<CustomField>
    <fullName>Discharged_Comments__c</fullName>
    <label>Discharged Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>