force-app/main/default/objects/Contact/fields/Explanation_of_Attestations__c.field-meta.xml
<CustomField>
    <fullName>Explanation_of_Attestations__c</fullName>
    <label>Explanation of Attestations</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>