force-app/main/default/objects/Contact/fields/Government_Benefits_Applicant_Receives__c.field-meta.xml
<CustomField>
    <fullName>Government_Benefits_Applicant_Receives__c</fullName>
    <label>Government Benefits Applicant Receives?</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>TANF</fullName>
            </value>
            <value>
                <fullName>Food Stamps</fullName>
            </value>
            <value>
                <fullName>Medicaid</fullName>
            </value>
            <value>
                <fullName>SSI or SSD</fullName>
            </value>
            <value>
                <fullName>None of the above</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>