force-app/main/default/objects/Contact/fields/Historical_Contact__c.field-meta.xml
<CustomField>
    <fullName>Historical_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Contact identified as a match upon application submission</inlineHelpText>
    <label>Historical Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Contacts (Historical Contact)</relationshipLabel>
    <relationshipName>HistoricalContacts</relationshipName>
    <type>Lookup</type>
</CustomField>