force-app/main/default/objects/Contact/fields/Historical_Email__c.field-meta.xml
<CustomField>
    <fullName>Historical_Email__c</fullName>
    <inlineHelpText>Used to match past participants with new users registering in the youth portal</inlineHelpText>
    <label>Historical Email</label>
    <type>Email</type>
</CustomField>