force-app/main/default/objects/Contact/fields/Historical_ID__c.field-meta.xml
<CustomField>
    <fullName>Historical_ID__c</fullName>
    <label>Historical ID</label>
    <length>82</length>
    <type>Text</type>
</CustomField>