force-app/main/default/objects/Contact/fields/How_Many_Children_in_Youth_s_Household__c.field-meta.xml
<CustomField>
    <fullName>How_Many_Children_in_Youth_s_Household__c</fullName>
    <inlineHelpText>Please provide the number of children in the applicant&apos;s household.</inlineHelpText>
    <label>How Many Children in Youth&apos;s Household?</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>