force-app/main/default/objects/Contact/fields/ID_Doc__c.field-meta.xml
<CustomField>
    <fullName>ID_Doc__c</fullName>
    <label>ID Doc?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>