force-app/main/default/objects/Contact/fields/Income__c.field-meta.xml
<CustomField>
    <fullName>Income__c</fullName>
    <label>Does the Youth Receive Income?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>