force-app/main/default/objects/Contact/fields/Income_from_operation_of_a_business__c.field-meta.xml
<CustomField>
    <fullName>Income_from_operation_of_a_business__c</fullName>
    <label>Income from operation of a business</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>