force-app/main/default/objects/Contact/fields/Is_This_Youth_TANF_Eligible__c.field-meta.xml
<CustomField>
    <fullName>Is_This_Youth_TANF_Eligible__c</fullName>
    <label>Is This Youth TANF Eligible?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>