force-app/main/default/objects/Contact/fields/Last_Clearance_Result__c.field-meta.xml
<CustomField>
    <fullName>Last_Clearance_Result__c</fullName>
    <label>Last Clearance Result</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cleared</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>