force-app/main/default/objects/Contact/fields/Last_Completed_Grade__c.field-meta.xml
<CustomField>
    <fullName>Last_Completed_Grade__c</fullName>
    <label>Last Completed Grade</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>6th</fullName>
            </value>
            <value>
                <fullName>7th</fullName>
            </value>
            <value>
                <fullName>8th</fullName>
            </value>
            <value>
                <fullName>9th</fullName>
            </value>
            <value>
                <fullName>10th</fullName>
            </value>
            <value>
                <fullName>11th</fullName>
            </value>
            <value>
                <fullName>12th or High School Diploma obtained</fullName>
            </value>
            <value>
                <fullName>GED (or other HS equivalent)</fullName>
            </value>
            <value>
                <fullName>Some college or technical school</fullName>
            </value>
            <value>
                <fullName>Associate Degree</fullName>
            </value>
            <value>
                <fullName>Bachelor’s Degree</fullName>
            </value>
            <value>
                <fullName>Master’s Degree and above</fullName>
            </value>
            <value>
                <fullName>Prefer not to say</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>