force-app/main/default/objects/Contact/fields/Launchpad__Gender__c.field-meta.xml
<CustomField>
    <fullName>Launchpad__Gender__c</fullName>
    <inlineHelpText>Current Gender</inlineHelpText>
    <label>Gender</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
                <default>true</default>
                <label>None</label>
            </value>
            <value>
                <fullName>Male</fullName>
            </value>
            <value>
                <fullName>Female</fullName>
            </value>
            <value>
                <fullName>Non-Binary</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Prefer Not To Say</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>