force-app/main/default/objects/Contact/fields/Launchpad__Race_Ethnicity__c.field-meta.xml
<CustomField>
    <fullName>Launchpad__Race_Ethnicity__c</fullName>
    <label>Race/Ethnicity</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>American Indian or Alaska Native</fullName>
            </value>
            <value>
                <fullName>Asian</fullName>
            </value>
            <value>
                <fullName>Black or African American</fullName>
            </value>
            <value>
                <fullName>Hispanic or LatinX</fullName>
            </value>
            <value>
                <fullName>Multiracial</fullName>
            </value>
            <value>
                <fullName>Native Hawaiian or Pacific Islander</fullName>
            </value>
            <value>
                <fullName>Not Hispanic or Latino</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Prefer not to say</fullName>
            </value>
            <value>
                <fullName>White</fullName>
            </value>
            <value>
                <fullName>Middle Eastern or North African</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>