force-app/main/default/objects/Contact/fields/Media_Picture_Release__c.field-meta.xml
<CustomField>
    <fullName>Media_Picture_Release__c</fullName>
    <inlineHelpText>I give permission to C2L-PHL and its contracted agencies, funders, and partners to use photographs and/or video of me taken during my participation in the program in publications, news releases, online, and in other communications related to the mission of program.</inlineHelpText>
    <label>Media &amp; Picture Release</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>