force-app/main/default/objects/Contact/fields/Other_Assistance_Needed__c.field-meta.xml
<CustomField>
    <fullName>Other_Assistance_Needed__c</fullName>
    <label>Other Assistance Needed</label>
    <length>155</length>
    <type>Text</type>
</CustomField>