force-app/main/default/objects/Contact/fields/Other_Country_of_Nationality__c.field-meta.xml
<CustomField>
    <fullName>Other_Country_of_Nationality__c</fullName>
    <label>Other Country of Nationality</label>
    <length>155</length>
    <type>Text</type>
</CustomField>