force-app/main/default/objects/Contact/fields/Other_Employment_Status__c.field-meta.xml
<CustomField>
    <fullName>Other_Employment_Status__c</fullName>
    <label>Other Employment Status</label>
    <length>155</length>
    <type>Text</type>
</CustomField>