force-app/main/default/objects/Contact/fields/Other_Gender_Identity__c.field-meta.xml
<CustomField>
    <fullName>Other_Gender_Identity__c</fullName>
    <label>Other Gender Identity</label>
    <length>155</length>
    <type>Text</type>
</CustomField>