force-app/main/default/objects/Contact/fields/Other_Internet_Connectivity__c.field-meta.xml
<CustomField>
    <fullName>Other_Internet_Connectivity__c</fullName>
    <label>Other Internet Connectivity</label>
    <length>155</length>
    <type>Text</type>
</CustomField>