force-app/main/default/objects/Contact/fields/Other_Last_Completed_Grade__c.field-meta.xml
<CustomField>
    <fullName>Other_Last_Completed_Grade__c</fullName>
    <label>Other Last Completed Grade</label>
    <length>155</length>
    <type>Text</type>
</CustomField>