force-app/main/default/objects/Contact/fields/Other_Living_Situation__c.field-meta.xml
<CustomField>
    <fullName>Other_Living_Situation__c</fullName>
    <label>Other Living Situation</label>
    <length>155</length>
    <type>Text</type>
</CustomField>