force-app/main/default/objects/Contact/fields/Parent_Primary_Caregiver_of_Child_ren__c.field-meta.xml
<CustomField>
    <fullName>Parent_Primary_Caregiver_of_Child_ren__c</fullName>
    <inlineHelpText>Is the youth a parent or primary caregiver of child(ren) under 18?</inlineHelpText>
    <label>Parent/Primary Caregiver of Child(ren)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Prefer Not To Say</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>