force-app/main/default/objects/Contact/fields/Preferred_payment_method__c.field-meta.xml
<CustomField>
    <fullName>Preferred_payment_method__c</fullName>
    <label>Preferred payment method?</label>
    <length>155</length>
    <type>Text</type>
</CustomField>