force-app/main/default/objects/Contact/fields/Public_Assistance_Payments__c.field-meta.xml
<CustomField>
    <fullName>Public_Assistance_Payments__c</fullName>
    <label>Public Assistance Payments</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>