force-app/main/default/objects/Contact/fields/Ready_for_Reassignment__c.field-meta.xml
<CustomField>
    <fullName>Ready_for_Reassignment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ready for Reassignment</label>
    <type>Checkbox</type>
</CustomField>