force-app/main/default/objects/Contact/fields/Relationship_To_This_Young_Person__c.field-meta.xml
<CustomField>
    <fullName>Relationship_To_This_Young_Person__c</fullName>
    <label>Relationship To This Young Person?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>