force-app/main/default/objects/Contact/fields/Release_of_Information__c.field-meta.xml
<CustomField>
    <fullName>Release_of_Information__c</fullName>
    <inlineHelpText>I give my permission for C2L-PHL and its contracted agencies, partners and funders to release information concerning my participation in the program. I understand that all information will be kept respectfully confidential but the sharing of this information within and among these agencies may be necessary.</inlineHelpText>
    <label>Release of Information</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>