force-app/main/default/objects/Contact/fields/Report_Card__c.field-meta.xml
<CustomField>
    <fullName>Report_Card__c</fullName>
    <label>Report Card?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>