force-app/main/default/objects/Contact/fields/Residency__c.field-meta.xml
<CustomField>
    <fullName>Residency__c</fullName>
    <label>Residency?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>