force-app/main/default/objects/Contact/fields/School__c.field-meta.xml
<CustomField>
    <fullName>School__c</fullName>
    <label>School</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Schools</valueSetName>
    </valueSet>
</CustomField>